2004-05-20  Paul Brook  <paul@codesourcery.com>

	Backport from mainline.
	* calls.c (precompute_arguments): Use PROMOTE_FUNCTION_MODE instead
	of PROMOTE_FOR_CALL_ONLY.
	* explow.c (promote_mode): Ditto.
	* function.c (assign_temp): Ditto.
	* system.h: Poison PROMOTE_FOR_CALL_ONLY.
	* config/arm/arm-protos.h (arm_function_value): Add prototype.
	* config/arm/arm.c (arm_promote_prototypes): New function.
	(TARGET_PROMOTE_FUNCTION_ARGS, TARGET_PROMOTE_FUNCTION_RETURN,
	TARGET_PROMOTE_PROTOTYPES): Define.
	(arm_function_value): New function.
	* config/arm/arm.h (PROMOTE_FUNCTION_MODE): Define.
	(FUNCTION_VALUE): Use arm_function_value.
	(PROMOTE_PROTOTYPES): Define.
	* config/cris/cris.h: Use PROMOTE_FUNCTION_MODE instead
	of PROMOTE_FOR_CALL_ONLY/PROMOTE_MODE.
	* config/mmix/mmix.h: Ditto.
	* config/s390/s390.h: Ditto.
	* config/sparc/sparc.h: Ditto.
	* doc/tm.texi: Document PROMOTE_FUNCTION_MODE.
	Remove PROMOTE_FOR_CALL_ONLY.

2004-05-15  Richard Earnshaw  <reanrsha@arm.com>

	* arm.h (TARGET_APCS_32): Delete.
	(TARGET_MMU_TRAPS): Delete.
	(TARGET_CPU_CPP_BUILTINS): Unconditionally define __APCS_32__.  Never
	define __APCS_26__.
	(CPP_SPEC): Remove checking of -mapcs-{26,32}.
	(ARM_FLAG_APCS_32, ARM_FLAG_MMU_TRAPS): Delete.
	(TARGET_SWITCHES): Remove alignment_traps and apcs-{26,32} switches.
	(prog_mode_type): Delete.
	(PROMOTE_MODE): Always promote unsigned for HImode.
	(SECONDARY_INPUT_RELOAD_CLASS): Simplify.
	(MASK_RETURN_ADDR): Simplify.
	* arm.c (arm_prgmode): Delete.
	(arm_override_options, arm_gen_rotated_half_load): Simplify.
	(print_multi_reg, output_return_instruction): Simplify.
	(arm_output_epilogue, arm_final_prescan_insn): Simplify.
	(arm_return_addr): Simplify.
	* arm.md (prog_mode): Delete.
	(conds): Simplify.
	(zero_extendhisi2, extendhisi2, movhi, movhi_bytes): Simplify.
	(rotated_loadsi, movhi_insn_littleend, movhi_insn_bigend): Delete.
	(loadhi_si_bigend, loadhi_preinc, loadhi_shiftpreinc): Delete.
	(loadhi_shiftpredec): Delete.