@@ -1,3 +1,9 @@
+2004-05-17  Paul Brook  <paul@codesourcery.com>
+
+	* unwind-dw2-fde.c (get_cie_encoding): Handle dwarf3 CIE format.
+	* unwind-dw2.c (extract_cie_info): Ditto.
+	(_Unwind_FrameState): Change retaddr_column to word type.
+
 2004-05-20  Paul Brook  <paul@codesourcery.com>
 
 	Backport from mainline.
